# hub-credentials

./: .env  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  envoy.yaml  hydra.yaml
.github/workflows/: apollo_release.yml  cargo.yml  cargo_test.yml  post.yaml  release.yaml
api/: Cargo.toml  proto.toml
api/src/: handlers.rs  lib.rs  main.rs  ory_client.rs
api/src/graphql/: mod.rs  schema.rs
api/src/graphql/mutations/: credential.rs  mod.rs
api/src/graphql/objects/: access_token.rs  credential.rs  mod.rs  organization.rs
api/src/graphql/queries/: credentials.rs  mod.rs  organizations.rs
