[package]
name = "holaplex-hub-credentials"
version = "0.1.0"
authors = ["Holaplex <engineering@holaplex.com>"]
edition = "2021"
description = "Holaplex Hub credentials service"
readme = "./README.md"
repository = "https://github.com/holaplex/hub-credentials"
license = "AGPL-3.0-or-later"
keywords = ["hub", "holaplex", "web3"]
categories = ["cryptography::cryptocurrencies", "web-programming"]

build = "build.rs"

[dependencies]
poem = { version = "1.3.50", features = ["anyhow", "test"] }
async-graphql = { version = "5.0.4", features = [
  "chrono",
  "uuid",
  "log",
  "dataloader",
  "apollo_tracing",
] }
async-graphql-poem = "5.0.3"
async-std = { version = "^1", features = ["attributes", "tokio1"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = { version = "1.0.91" }
ory-openapi-generated-client = { package = "ory-client", version = "1.1.5" }
prost = "0.11.6"

[dependencies.hub-core]
package = "holaplex-hub-core"
version = "0.2.1"
git = "https://github.com/holaplex/hub-core"
branch = "stable"
features = ["kafka"]

[build-dependencies.hub-core-build]
package = "holaplex-hub-core-build"
version = "0.1.0"
git = "https://github.com/holaplex/hub-core"
branch = "stable"
